// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`ApiProviderConfig getConfigForCommand with command-specific config 1`] = `
{
  "apiKey": undefined,
  "baseUrl": undefined,
  "budget": undefined,
  "keyFile": undefined,
  "location": undefined,
  "model": "deepseek-chat",
  "name": undefined,
  "parameters": {},
  "project": undefined,
  "provider": "deepseek",
  "rules": undefined,
}
`;

exports[`ApiProviderConfig getConfigForCommand falls back to default provider 1`] = `
{
  "apiKey": "test-key",
  "baseUrl": undefined,
  "budget": undefined,
  "keyFile": undefined,
  "location": undefined,
  "model": "claude-3-opus",
  "name": undefined,
  "parameters": {},
  "project": undefined,
  "provider": "anthropic",
  "rules": undefined,
}
`;

exports[`parseOptions prioritizes CLI flags over env vars and config 1`] = `
{
  "apiKey": "cli-key",
  "baseUrl": undefined,
  "budget": undefined,
  "keyFile": undefined,
  "location": undefined,
  "model": "deepseek-chat-32k",
  "name": undefined,
  "parameters": {},
  "project": undefined,
  "provider": "deepseek",
  "rules": undefined,
}
`;

exports[`parseOptions handles multiple config files 1`] = `
{
  "defaultModel": "claude-3-sonnet",
  "defaultProvider": "anthropic",
  "excludeFiles": undefined,
  "providers": {
    "anthropic": {
      "defaultModel": "claude-3-sonnet",
    },
  },
  "rules": 
"rule1

rule2"
,
}
`;

exports[`parseOptions merges environment variables with config 1`] = `
{
  "apiKey": "cli-key",
  "baseUrl": undefined,
  "budget": undefined,
  "keyFile": undefined,
  "location": undefined,
  "model": "deepseek-chat",
  "name": undefined,
  "parameters": {},
  "project": undefined,
  "provider": "deepseek",
  "rules": undefined,
}
`;
